update rest api reponse and request
