# dto/employee_sync_response.go
@@ -1,0 +1,7 @@
+package dto
+
+type SyncResponse struct {
+	Employees  []Employee `json:"employees"`
+	NextCursor Cursor     `json:"next_cursor"`
+	HasMore    bool       `json:"has_more"`
+}
