# handlers/filter_handler.go
@@ -1,7 +1,8 @@
 package handlers
 
 import (
-	"static-api/models"
+	"static-api/dto"
+	"static-api/response"
 
 	"github.com/gin-gonic/gin"
 )
@@ -12,21 +13,21 @@ import (
 // @Tags employees
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.EmployeeFiltersResponse "Filter data fetched successfully"
-// @Failure 500 {object} models.MessageResponse "Internal server error"
+// @Success 200 {object} dto.EmployeeFiltersResponse "Filter data fetched successfully"
+// @Failure 500 {object} response.MessageResponse "Internal server error"
 // @Router /employees/filters [get]
 func (h *EmployeeHandler) GetEmployeeFilters(c *gin.Context) {
 	data, err := h.service.GetEmployeeFilters()
 
 	if err != nil {
-		c.JSON(500, models.MessageResponse{
+		c.JSON(500, response.MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
 		return
 	}
 
-	c.JSON(200, models.EmployeeFiltersResponse{
+	c.JSON(200, dto.EmployeeFiltersResponse{
 		Status:  "success",
 		Message: "Filters fetched successfully",
 		Data:    data,
